--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "mui-file-input": "^3.0.2",
     "next": "13.4.2",
     "postcss-preset-env": "^8.5.1",
     "react": "18.2.0",
